# oqtopus-engine

./: README.md
.github/workflows/: ci.yml
circuit_combiner/: Dockerfile  Dockerfile.dev  Taskfile.yml  docker-compose.yml  pyproject.toml
circuit_combiner/tests/: test_circuit_combiner.py
coreapp/: .gitignore  Dockerfile.dev  README.md  Taskfile.yml  go.mod  go.sum
coreapp/common/: util.go  util_test.go
coreapp/core/: conf.go  data.go  data_test.go  db.go  info.go  job.go  job_test.go  mock.go  run.go  setting.go  setting_test.go  syscomponent.go  version.go  version_test.go
coreapp/db/: service.go
coreapp/estimation/: estimator_test.go  job.go
coreapp/log/: metrics.go  version.go
coreapp/mitig/: mitig.go  mitig_test.go
coreapp/oas/: README.md  Taskfile.yml  config.yml  converter.go  converter_test.go
coreapp/poller/: awspollclient.go  poller.go  poller_test.go
coreapp/qpu/: circuit.go  circuit_test.go  device.go  device_test.go  gateway.go  gateway_test.go  ir.go  ir_test.go  qmt.go  (+2 more)
docs/: CONTRIBUTING.md
estimation/: Dockerfile.dev  Makefile  pyproject.toml
mitigation/: Dockerfile.dev  Makefile  pyproject.toml
mitigation/src/: mitigator.py
mitigation/src/mitigation_interface/v1/: mitigation_pb2.py  mitigation_pb2_grpc.py
mitigation/tests/: pytest.ini  test_mitigator.py
spec/: Makefile  buf.gen.est.yaml  buf.gen.job.yaml  buf.gen.mitig.yaml  buf.gen.multiprog.yaml  buf.gen.qpu.yaml  buf.gen.sse.yaml  buf.yaml
sse_runtime/: Dockerfile  Taskfile.yml  docker-compose.yaml  pyproject.toml
test/: README.md  Runn.yml  Taskfile.yml
(+83 files in other folders)
