[project]
name = "mitigation"
version = "1.0.0"
requires-python = ">= 3.12"
dependencies = [
  "grpc-stubs>=1.53.0.6",
  "grpcio>=1.73.0",
  "mypy>=1.16.1",
  "numpy==2.2.2",
  "protobuf==6.31.1",
  "pydantic==2.10.6",
  "pytest==8.3.3",
  "qiskit==1.4.2",
  "qiskit-qasm3-import>=0.6.0",
  "ruff>=0.12.1",
]

[tool.uv]
package = false

[[tool.mypy.overrides]]
module = ["qiskit.*", "mitigation_interface.*"]
ignore_missing_imports = true
